--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -10,9 +10,9 @@
       <h3><%= product.title %></h3>
       <p><%= sanitize(product.description) %></p>
       <div class="price_line">
-        <!-- START:currency -->
         <span class="price"><%= number_to_currency(product.price) %></span>
-        <!-- END:currency -->
+        <%= button_to 'Add to Cart', line_items_path(product_id: product),
+                      remote: true %>
       </div>
     </div>
 <% end %>
